--- a/SYS/Einleitung/Einleitung.tex
+++ b/SYS/Einleitung/Einleitung.tex
@@ -33,7 +33,7 @@ Die Darstellungen in diesem Buch werden mit Beispielen illustriert. Beispiele be
 
 \noindent Wesentlicher Erfolgsfaktor für das Verständnis und den praktischen Umgang mit den Methoden der Systemtheorie ist das selbstständige Bearbeiten von Übungsaufgaben. Aus diesem Grund werden auf der Plattform \textit{Systemtheorie Online} Übungsaufgaben mit umfangreichen Musterlö-sungen angeboten, die eine semesterbegleitende Vertiefung ermöglichen. 
 
-
+\newpage
 
 
 \subsection{Ergänzungen zum Buch}
@@ -44,8 +44,75 @@ Das Fach Systemtheorie führt zu interdisziplinären Systembeschreibungen und bi
 
 Eine Maßnahme ist die Online-Plattform Systemtheorie-Online. Bei der Online-Plattform handelt es sich um ein Internet-Portal zur Unterstützung des Vorlesungsbetriebs. Die Studierenden haben dort die Möglichkeit, das Buch als PDF-Dokument herunterzuladen oder es online mit mehreren Zusatzfunktionen durchzuarbeiten. Zu den präsentierten Inhalten werden themenbezogen Links zu Praxisbeispielen und Übungsaufgaben sowie sogenannte Applikationen und sogenannte vir-tuelle Versuche bereitgestellt.
 
-\subsubsection{Teamorientierte Lehrmethoden}
+\begin{figure}[H]
+  \centerline{\includegraphics[width=0.5\textwidth]{Einleitung/Bilder/image1}}
+  \caption{Systemtheorie Online (www.hs-karlsruhe.de/mesysto)}
+  \label{fig:SYSONLINE}
+\end{figure}
+\bigskip
+
+{\fontfamily{phv}\selectfont
+\noindent\textbf{Applikationen zur Systemtheorie}} \smallskip
+
+\noindent Für Sachverhalte und Zusammenhänge, die sich die Studierenden nur schwer vorstellen können, werden Applikationen zur Verfügung gestellt. Bei den Applikationen können Parameter beispielsweise per Schiebregler verändert und die Folgen dieser Modifikationen auf die Ausgabesignale beobachtet werden. Die Applikationen erlauben es, im Rahmen des spielerischen Ausprobierens ein Gefühl für Zusammenhänge und Abhängigkeiten verschiedener Systemparameter zu bekommen. In Video-Tutorials werden die Studierende in den Umgang mit den Applikationen eingeführt. Sie sollen dabei vor der Manipulation von Parametern Hypothesen über zu erwartende Effekte auf das Gesamtsystem abgeben, bevor das Ergebnis-Feedback bezüglich des Zutreffens des eigenen Vorhersagen erfolgt.
+
 \clearpage
+\noindent Das Vorgehen bei den grafischen Animationen kann kurz an einem Beispiel erläutert werden: Ein sogenanntes PT2-Glied ist von den Parametern Zeitkonstante T, Dämpfung d und Verstärkung k abhängig (Bild \ref{fig:PT2GLIED}). Die grafische Animation zeigt parallel die Eigenschaften des Systems im Zeit-, Laplace- und Frequenzbereich. Die Parameter können dabei durch Schieberegler variiert werden, sodass die Studierenden spielend ein Fingerspitzengefühl für das Übertragungsverhalten bekommen. Durch die Bereitstellung als Silverlight-Applikation benötigen die Studierenden keine zusätzliche Software, um das Programm auszuführen.
+
+\begin{figure}[H]
+  \centerline{\includegraphics[width=0.5\textwidth]{Einleitung/Bilder/image2}}
+  \caption{Darstellung des Verhaltens eines sogenannten PT2-Gliedes als Silverlight-Applikation}
+  \label{fig:PT2GLIED}
+\end{figure}
+
+\noindent Da Microsoft die Wartung von Silverlight eingestellt hat, werden die verfügbaren Applikationen derzeit neu implementiert. Bild \ref{fig:Fourier-Reihe} zeigt eine erste Applikation, die unabhängig vom Betriebssystem lauffähig ist.
+
+\begin{figure}[H]
+  \centerline{\includegraphics[width=0.5\textwidth]{Einleitung/Bilder/image3}}
+  \caption{Applikation Fourier-Reihe}
+  \label{fig:Fourier-Reihe}
+\end{figure}
+
+\noindent Bis zur kompletten Umsetzung können die Silverlight Applikationen mit dem Microsoft Internet Explorer weiterverwendet werden.\bigskip
+
+{\fontfamily{phv}\selectfont
+\noindent\textbf{Virtuelle Versuche zur Systemtheorie}} \smallskip
+
+\noindent Darüber hinaus ermöglicht die Online-Plattform die Durchführung virtueller Experimente. Passend zu den Themen des Skripts werden Versuche mit dem Laborwagen auf Video aufgezeichnet und diese auf der Online-Plattform gemeinsam mit den entsprechenden Datensätzen zur Verfügung gestellt. Zusätzliche Erläuterungen zur Durchführung der Versuche und Auswertung der Daten fördern ein Grundverständnis für das wissenschaftliche Denken und Arbeiten. \newline
+Als Experimente zur Demonstration stehen bereits einige Versuche mit dem Laborwagen zur Verfügung. Bild \ref{fig:EinschwingverhaltenLautsprecher} zeigt zum Beispiel einen Versuch zur Beschreibung des Einschwingverhaltens eines Lautsprechers. Weitere Experimente insbesondere zu den Themen zeitdiskrete Systeme und stochastische Systeme wurden aufgebaut und gefilmt, die Videos stehen als Datei zur Verfügung. Die Studierenden erhalten aber nicht nur den Video-Stream, sondern auch die einzelnen Versuchsergebnisse in Form von Daten-Files und können bei Interesse eigene Versuchsauswertungen erstellen
+
+\begin{figure}[H]
+  \centerline{\includegraphics[width=0.5\textwidth]{Einleitung/Bilder/image4}}
+  \caption{Versuchsaufbau zum Einschwingverhalten eines Lautsprechers}
+  \label{fig:EinschwingverhaltenLautsprecher}
+\end{figure}
+
+\noindent Das Portal Systemtheorie-Online bietet den Studierenden damit die Möglichkeit, theoretische Sachverhalte auf eine anschauliche Art aufbereitet und erklärt zu bekommen. Damit wird eine Forderung aus der Evaluation aufgegriffen, mehr Versuche in der Systemtheorie einzusetzen. Darüber hinaus haben die Studierenden die Möglichkeit, selbst aktiv zu werden und Versuche selbstständig auszuwerten und daran ihren eigenen Lernerfolg zu messen. Das Projekt bietet da-mit einen Beitrag zur praxisnahen Ausbildung von Studierenden und stellt wegen des freien Zu-gangs ein Weiterbildungsangebot dar, das Mitarbeitern aus Industrie und Wirtschaft offensteht. Der Aufbau dieses Portals wurde im Rahmen von Pro-Studium aus Studiengebühren und aus Mitteln des Landes Baden-Württemberg im Rahmen des Programms Willkommen in der Wissenschaft finanziert.
+
+\subsubsection{Teamorientierte Lehrmethoden}
+
+\noindent Parallel zu den Online-Aktivitäten wird die Vorlesung um unterschiedliche teamorientierte Lehrmethoden ergänzt. Kooperative Lernformen fördern den Zusammenhalt und tragen sozialen Bedürfnissen Rechnung. Sie wirken der sozialen Isolation entgegen, die Studierenden fühlen sich eingebunden. Nicht zuletzt spiegelt die Teamarbeit auch berufliche Anforderungen wider. Die Methoden des teamorientierten Lernens sind auf der Online-Plattform ausführlich dokumentiert
+\bigskip
+
+{\fontfamily{phv}\selectfont
+\noindent\textbf{Lange Nächte der Systemtheorie}} \smallskip
+
+\noindent Lange Nächte sind abendliche Veranstaltungen zur Vertiefung des Vorlesungsstoffs, passend zu einem bestimmten Vorlesungsthema. In entspannter Atmosphäre werden Übungsaufgaben und Experimente mit dem Laborwagen miteinander kombiniert. Der verfügbare Zeitrahmen erlaubt eine Beschäftigung mit komplexeren Fragestellungen. In erster Linie ist dieser Baustein als offener Lernraum konzipiert, in dem Wissen stressfrei vermittelt und vertieft wird. Erste lange Nächte wurden von den Studierenden sehr positiv bewertet. Besonders gelobt wurden das gemeinschaftliche Lernen in der Gruppe, das angenehme Arbeitsklima sowie der Praxisbezug und die Arbeit mit realen Messdaten\bigskip
+
+{\fontfamily{phv}\selectfont
+\noindent\textbf{Großer Preis der Systemtheorie}} \smallskip
+
+\noindent In Anlehnung an die Fernsehsendung "Der große Preis" wird mit den Studierenden eine Quiz-Show veranstaltet. Dabei bearbeiten die Studierenden in Gruppen Fragen zu Themenblöcken der Vorlesung. Die Punktzahl ist abhängig von Schwierigkeitsgrad. Die Abschätzung eines Einsatzes bei sogenannten RisikoFragen erfordert die Selbsteinschätzung der Studierenden. Durch sogenannte Glücksfragen zu fachfremden Themen können auch Gruppen mit mäßigem Fachwissen gewinnen. Die traditionelle Rangordnung innerhalb der Vorlesung wird aufgebrochen und die Motivation der Studierenden steigt. Studierenden zeigten bei der ersten Durchführung eine extrem hohe Motivation und hohes Engagement.\bigskip
+
+{\fontfamily{phv}\selectfont
+\noindent\textbf{Zirkeltraining Systemtheorie}} \smallskip
+
+\noindent Erfolgreiches Lernen setzt ein Gleichgewicht zwischen Anspannung und Entspannung voraus. Zielsetzung dieses Zirkeltrainings ist es deshalb, sportliche Übungen oder Geschicklichkeitsspiele in den Lernprozess zu integrieren. Dazu wird ein Parkour aufgebaut, bei dem sich Übungsaufgaben und Spielstationen abwechseln. Bei der Veranstaltung stehen die Motivation und der Spaß an vorderster Stelle. Es wird eine angenehme Atmosphäre geschaffen, in der der Druck beim Bewältigen von Übungsaufgaben durch spielerische Anteile entlastet wird. Wegen des erforderlichen Platzbedarfs eignet sich das Zirkeltraining Systemtheorie insbesondere für die Sommermonate.\newline
+
+\noindent Die Evaluationsergebnisse zur Vorlesung zeigen, dass es durch den Einsatz teamorientierter Lehrmethoden gelungen ist, diese Abneigung gegen das Fach Systemtheorie zumindest teilweise abzubauen
+
+\clearpage
+
 \subsection{Danksagung}
 
 Wir bedanken uns bei den Studierenden und Assistenten Andreas Kühn, Erik Seiter, Sebastian Stiegler, Philipp Fetzer, Jaruwan Limsukhakorn, Doraemon Dedkum, Georg Bauer, Jochen Lang, Alex Schwin und Michael Holz für die Gestaltung und Ausarbeitung des wesentlichen Teils der Übungsaufgaben, Applikationen und Versuche.\newline
