--- a/SYS/Anderungsindex.tex
+++ b/SYS/Anderungsindex.tex
@@ -1,18 +1,43 @@
 \begin{table}[H]
 \setlength{\arrayrulewidth}{.1em}
 \setlength{\fboxsep}{0pt}
-\begin{tabular}{wl{1.4cm} | wl{2.3cm} | wl{2.5cm} | wl{9.8cm}}
+\begin{tabular}{wc{1.4cm} | wc{2.3cm} | wc{2.5cm} | wl{9.8cm}}
 \xrowht{15pt}
 
 \fontfamily{phv}\selectfont\textbf{Version} &
 \fontfamily{phv}\selectfont\textbf{Datum} & 
 \fontfamily{phv}\selectfont\textbf{Verfasser} & 
-\fontfamily{phv}\selectfont\textbf{Änderungen}\\ \hline \xrowht{15pt}
+\fontfamily{phv}\selectfont\textbf{Änderungen}\\ \hline \xrowht{10pt}
+
+\multirow{3}{*}{\fontfamily{phv}\selectfont{14}} &
+\multirow{3}{*}{\fontfamily{phv}\selectfont{15.03.2020}} &
+\fontfamily{phv}\selectfont{M. Strohrmann,} &
+\multirow{2}{*}{\fontfamily{phv}\selectfont{Korrektur von Fehlern, insbesondere bei Anfangs- und }}\\ \xrowht{8pt}
+
+&
+&
+\fontfamily{phv}\selectfont{F. Keller,} &
+\multirow{2}{*}{\fontfamily{phv}\selectfont{Übergangsbedingungen}}
+\\  \xrowht{8pt}
+&
+&
+\fontfamily{phv}\selectfont{J. Weizenecker} &
+\\ \hline \xrowht{8pt}
+
+\multirow{2}{*}{\fontfamily{phv}\selectfont{13}} &
+\multirow{2}{*}{\fontfamily{phv}\selectfont{15.03.2017}} &
+\fontfamily{phv}\selectfont{M. Strohrmann,} &
+\multirow{2}{*}{\fontfamily{phv}\selectfont{Korrektur von Fehlern}}\\ \xrowht{10pt}
+
+&
+&
+\fontfamily{phv}\selectfont{U. Brunner} &
+\\ \hline \xrowht{8pt}
 
 \multirow{2}{*}{\fontfamily{phv}\selectfont{12}} &
-\multirow{2}{*}{\fontfamily{phv}\selectfont{01.03.2016}} &
+\multirow{2}{*}{\fontfamily{phv}\selectfont{15.03.2016}} &
 \fontfamily{phv}\selectfont{M. Strohrmann,} &
-\multirow{2}{*}{\fontfamily{phv}\selectfont{Fehlerkorrektur, Ausgabe für Vorlesung SS 20165}}\\ \xrowht{10pt}
+\multirow{2}{*}{\fontfamily{phv}\selectfont{Ausgabe für Systemtheorie Online}}\\ \xrowht{10pt}
 
 &
 &
@@ -106,5 +131,3 @@
 
 \end{tabular}\bigskip
 \end{table}
-
-\clearpage
