--- a/SYS/frontpage.tex
+++ b/SYS/frontpage.tex
@@ -1,24 +1,26 @@
 \begin{figure}[H]
-  \centerline{\includegraphics[width=0.6\textwidth]{Syslogo.PNG}}
+  \centerline{\includegraphics[width=0.8\textwidth]{Syslogo.PNG}}
 \end{figure}
 
 \noindent \bigskip
 
-\centerline  {\fontfamily{phv}\fontsize{50}{60}\selectfont Systemtheorie Teil A} 
+\centerline  {\fontfamily{phv}\fontsize{40}{50}\selectfont Systemtheorie Teil A} 
 
 \noindent \medskip
 
-\centerline  {\fontfamily{phv}\fontsize{23}{30}\selectfont  - Zeitkontinuierliche Signale und Systeme -}
+\centerline  {\fontfamily{phv}\fontsize{20}{20}\selectfont  - Zeitkontinuierliche Signale und Systeme -}
 
 \noindent \bigskip
 \noindent \bigskip
+\noindent \bigskip
+\noindent \bigskip
 
-\centerline  {\fontfamily{phv}\fontsize{23}{30}\selectfont  Manfred Strohrmann}\medskip
+\centerline  {\fontfamily{phv}\fontsize{20}{20}\selectfont  Manfred Strohrmann, Urban Brunner,}\medskip
 
 \noindent 
 
-\centerline  {\fontfamily{phv}\fontsize{23}{30}\selectfont Urban Brunner}
-\vspace{6.0\baselineskip}
+\centerline  {\fontfamily{phv}\fontsize{20}{20}\selectfont Frieder Keller, Jürgen Weizenecker}
+\vspace{4.0\baselineskip}
 
 \begin{figure}[H]
   \centerline{\includegraphics[width=0.6\textwidth]{FH_Logo.png}}
