--- a/SYS/main.tex
+++ b/SYS/main.tex
@@ -8,6 +8,8 @@
 \section*{Änderungsindex}
 \input{Anderungsindex}
 \newpage
+
+\thispagestyle{empty}
 \pagenumbering{Roman}
 \thispagestyle{empty}
 %\pagenumbering{gobble} %Page numbering empty
