--- a/TDS/preamble.tex
+++ b/TDS/preamble.tex
@@ -43,6 +43,8 @@
 \usepackage{wrapfig}
 \usepackage[justification=centering]{caption}
 
+% Hide subsubsections from the table of contents
+\setcounter{tocdepth}{2}
 
 \setlength\mathindent{0pt}
 \input{insbox}
